--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,4 @@
-# //deyloy
-# URL_SERVER="https://server-97i3.onrender.com"
-# URL_CLIENT="https://client-97i3.netlify.app"
-# URL_DB= "mongodb+srv://luongluyen:luyen123@mern-project.47shdst.mongodb.net/?retryWrites=true&w=majority"
-
 //http://localhost:5000
 URL_SERVER="http://localhost:5000"
 URL_CLIENT="http://localhost:3000"
-URL_DB= "mongodb+srv://luongluyen:luyen123@mern-project.47shdst.mongodb.net/?retryWrites=true&w=majority"
+NODE_ENV=development
