--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,12 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.19",
+    "sequelize": "^6.6.2",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
